  (Stephen Dolan, review by Xavier Leroy)

- #9316, #9443: Use typing information from Clambda for mutable Cmm variables.
  (Stephen Dolan, review by Vincent Laviron, Guillaume Bury, Xavier Leroy,
  and Gabriel Scherer)

- #9426: build the Mingw ports with higher levels of GCC optimization
  (Xavier Leroy, review by Sébastien Hinderer)

### Code generation and optimizations:

- #8637, #8805, #9247, #9296: Record debug info for each allocation.
  (Stephen Dolan and Jacques-Henri Jourdan, review by Damien Doligez,
   KC Sivaramakrishnan and Xavier Leroy)

- #9193: Make tuple matching optimisation apply to Lswitch and Lstringswitch.
  (Stephen Dolan, review by Thomas Refis and Gabriel Scherer)

### Standard library:

- #9077: Add Seq.cons and Seq.append
  (Sébastien Briais, review by Yawar Amin and Florian Angeletti)

- #9248: Add Printexc.default_uncaught_exception_handler
  (Raphael Sousa Santos, review by Daniel Bünzli)

- #9235: Add Array.exists2 and Array.for_all2
  (Bernhard Schommer, review by Armaël Guéneau)

- #9226: Add Seq.unfold.
   (Jeremy Yallop, review by Hezekiah M. Carty, Gabriel Scherer and
   Gabriel Radanne)

- #8771: Lexing: add set_position and set_filename to change (fake)
   the initial tracking position of the lexbuf.
   (Konstantin Romanov, Miguel Lumapat, review by Gabriel Scherer,
    Sébastien Hinderer, and David Allsopp)

- #9059: Added List.filteri function, same as List.filter but
  with the index of the element.
  (Léo Andrès, review by Alain Frisch)

- #8894: Added List.fold_left_map function combining map and fold.
  (Bernhard Schommer, review by Alain Frisch and github user @cfcs)

- #9237: `Format.pp_update_geometry ppf (fun geo -> {geo with ...})`
  for formatter geometry changes that are robust to new geometry fields.
  (Gabriel Scherer, review by Josh Berdine and Florian Angeletti)

- #7110: Added Printf.ikbprintf and Printf.ibprintf
  (Muskan Garg, review by Gabriel Scherer and Florian Angeletti)
